# httpSvr

./: README.md  httpSvr.vcxproj  httpSvr.vcxproj.filters  stdafx.cpp
openssl/: opensslv.h  sslerr.h
src/: 50x.html  CMakeLists.txt  asynFile.cpp  asynFile.h  brotliMng.cpp  brotliMng.h  codeDeflate.cpp  codeDeflate.h  common.h  compressMng.cpp  compressMng.h  configMng.cpp  configMng.h  contentTypeMng.cpp  contentTypeMng.h  convertSet.cpp  convertSet.h  dispatch.cpp  dispatch.h  faceCGI_C.cpp  faceCGI_C.h  fastcgi.h  fcgi.cpp  fcgi.h  funDef.h  gen.sh  gzipCode.cpp  gzipCode.h  h2Common.h  h2Frame.h  h2Mng.cpp  h2Mng.h  h2Session.cpp  h2Session.h  h2huffman.cpp  h2huffman.h  h2pack.cpp  h2pack.h  h2tables.h  handleJson.cpp  (+26 more)
src/zlib/: zconf.h
win_lib/: libcrypto.lib  libglog.lib  zlib.lib
